# cpp-project-template-with-deps

./: .clang-format  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/main/: CMakeLists.txt  constants.h  main.cpp
